Refactoring the reposotories + add specification use case for list
